addition files in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ clone_of_main.1py
 clone2.py
 clone3.py
 loading.py
-math_image1 - Copy.png
-math_image2..jpg
-math_image3.jpeg.jpg
+try.py
+try2.py
+trying_the_codes.py
